--- a/DatabaseSampler/Views/_ViewImports.cshtml
+++ b/DatabaseSampler/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-@using DatabaseSampler
-@namespace HelloDatabaseSampler.Views
+@namespace DatabaseSampler.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
