Update copyright to include current year

--- a/DatabaseSampler/Views/Shared/_Layout.cshtml
+++ b/DatabaseSampler/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Mikey Monster
+            &copy;2019-@DateTime.Today.Year Mike Wild
         </div>
     </footer>
 
