--- a/DatabaseSampler/Views/Postgres/Index.cshtml
+++ b/DatabaseSampler/Views/Postgres/Index.cshtml
@@ -19,9 +19,9 @@
     <table>
         <thead>
             <tr>
-                <td>Id</td>
-                <td>FirstName</td>
-                <td>LastName</td>
+                <th>Id</th>
+                <th>FirstName</th>
+                <th>LastName</th>
             </tr>
         </thead>
         @foreach (var student in Model.Students.OrderBy(s => s.Id))
