--- a/DatabaseSampler/Views/Shared/_Layout.cshtml
+++ b/DatabaseSampler/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cosmos" asp-action="Index">Cosmos DB</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Mongo" asp-action="Index">Mongo DB</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Postgres" asp-action="Index">PostgresSQL</a>
                         </li>
                         <li class="nav-item">
