CosmosDB integration refactor and dependency updates
- Standardized CosmosDB IDs and partition key to lowercase and "/name"
- Simplified Expense model and removed JSON attributes
- Refactored CosmosDbService: direct object insert, improved logging, removed unused code
- Configured CosmosDB client for camelCase serialization
- Updated package versions for compatibility and bug fixes
- Improved date display in UI and added build property to bypass Newtonsoft.Json check
- Updated documentation with CosmosDB troubleshooting link

--- a/DatabaseSampler/Views/Cosmos/Index.cshtml
+++ b/DatabaseSampler/Views/Cosmos/Index.cshtml
@@ -33,7 +33,7 @@
                 <td>@item.Name</td>
                 <td>@item.Amount</td>
                 <td>@item.Frequency</td>
-                <td>@item.StartDate</td>
+                <td>@item.StartDate.ToShortDateString()</td>
                 <td>@item.MonthlyCost</td>
                 @*<td>
                     @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
